# fe8u-cskillsys-kernel

./: .clang-format  .gitignore  1  FEBuilderGBA.exe - Shortcut.lnk  LICENSE  OpenTerminal.bat  README.md  check_codingstyle.sh  configs.mk  custom-did.txt  decomp_notes.txt  diff-sym.sh  main-kernel.event  main.event  makefile  readmemm  tmp.py  version.mk
Configs/: .gitignore  configs.h  usr-defined.s
Contants/: Contants.event  Contents.event  contants.mk
Contents/: Contents.event  contents.mk
Data/: Data.event  Reloc.event
Debug/: Debug.event
Doc/: BattleSystem.md  CHAX.md  Memory.md  MiscSkillEffect.md  Multi-Language.md  SkillSys.md
Fonts/: .gitignore  FontList.txt  Fonts.event  GlyphInstaller.event  fonts.mk  makefile
Kernel/: .gitignore  kernel.event
LTS/: doc.md  fe8-kernel-dev.bsdiff  fe8-kernel-dev.ref.event  fe8-kernel-dev.ref.s  fe8-kernel-dev.sym
Patches/: .gitignore  PATCH_AnimNumberfx.txt  PATCH_ArtsInfo.txt  PATCH_Arts_Skill.txt  PATCH_Arts_WRank.txt  PATCH_Arts_WRank_Class.txt  PATCH_Arts_WRank_Unit.txt  PATCH_Arts_Weapon.txt  PATCH_BanimSwitcher.txt  PATCH_Battle_WTA.txt  PATCH_Battle_WTA_Item.txt  PATCH_CharMaxStatus.txt  PATCH_ClassType_Armor.txt  PATCH_ClassType_Beast.txt  PATCH_ClassType_Cavalry.txt  PATCH_ClassType_Dragon.txt  PATCH_ClassType_Flier.txt  PATCH_ComboAtkEN.txt  PATCH_Combo_MapAnimApfx.txt  PATCH_CriticalBonus.txt  PATCH_DeignerConfig.txt  PATCH_DesignerConfig.txt  PATCH_DesignerConfigBattle.txt  PATCH_DisableMovePath.txt  PATCH_EVENTSCRIPT_Debuff.txt  PATCH_EVENTSCRIPT_SkillOps.txt  PATCH_HerosMovementJobTable.txt  PATCH_HiddenLevel.txt  PATCH_HookList_Action.txt  PATCH_HookList_BattleToUnit.txt  PATCH_HookList_ClearUnit.txt  PATCH_HookList_CopyUnit.txt  PATCH_HookList_LoadUnit.txt  PATCH_HookList_NewSave.txt  PATCH_HookList_PostAction.txt  PATCH_HookList_PreBattleCalc.txt  PATCH_HookList_StatusGetter_Def.txt  PATCH_HookList_StatusGetter_Hp.txt  PATCH_HookList_StatusGetter_Lck.txt  PATCH_HookList_StatusGetter_Mag.txt  (+86 more)
Preload/: AllocMsgTable.event  CommonProtection.event  KernelReloc.event  Magic.event  PreloadData.event  Reloc.event
Reloc/: External_Declaration.event  (+1 more)
Tools/EventAssembler/.Sources/EAFormattingSuite/: .gitignore  EAFormattingSuite.cabal  FEParser.hs  GBAGraphics.hs  PalettedPng.hs  PngType.hs  requirements.txt
Tools/EventAssembler/.Sources/EAFormattingSuite/Png2Dmp/: Png2Dmp.hs
Tools/EventAssembler/.Sources/EAFormattingSuite/Portrait Formatter/: PortraitFormatter.hs
Tools/EventAssembler/.Sources/EAFormattingSuite/Text Parser/: ParseFile.hs
Tools/EventAssembler/.Sources/EAFormattingSuite/Text Ripper/: makefile
Tools/EventAssembler/.Sources/ea-dep/: .gitignore  CMakeLists.txt  README.md  file-utils.h  main.cpp  parser.cpp  parser.h  parser.repp
Tools/EventAssembler/.Sources/lyn/: .gitignore  CMakeLists.txt  README.md  config.cmake  config.h  config.in  main.cpp
Tools/EventAssembler/.Sources/lyn/core/: arm_relocator.cpp  arm_relocator.h  data_chunk.cpp  data_chunk.h  data_file.cpp  data_file.h  event_object.cpp  event_object.h  section_data.cpp  section_data.h
Tools/EventAssembler/.Sources/lyn/ea/: event_code.cpp  event_code.h  event_section.cpp  event_section.h
Tools/EventAssembler/.Sources/lyn/util/: hex_write.h
(+3027 files in other folders)
